Added Adguard Service to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,15 @@ services:
     ports:
       - "${PRIVACYNEST_PORT}:3000"
     restart: unless-stopped
+
+  adguard:
+    image: adguard/adguardhome:latest
+    container_name: adguard
+    restart: unless-stopped
+    ports:
+      - "53:53/tcp"     # DNS
+      - "53:53/udp"     # DNS
+      - "${PRIVACYNEST_PORT}:3000"  # Admin UI
+    volumes:
+      - ./configs/adguard/work:/opt/adguardhome/work
+      - ./configs/adguard/conf:/opt/adguardhome/conf
